<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_add" />
    <item
        android:id="@+id/action_extend"
        android:orderInCategory="100"
        android:showAsAction="never"

        android:title="@string/action_extend" />

    <item
        android:id="@+id/action_smetric"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_smetric" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_reset" />
</menu>
