<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">


    <LinearLayout

        android:id="@+id/container_controller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:focusable="true" />

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">


            <com.fontsampler.manager.FloatingHintEditText
                android:id="@+id/sizeBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_size"
                android:inputType="numberDecimal" />

            <com.fontsampler.manager.FloatingHintEditText
                android:id="@+id/colorBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Hex"
                android:inputType="textAutoComplete" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/scrollView"
        android:background="@android:color/darker_gray"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"></View>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/container_controller">


        <TextView
            android:id="@+id/sampleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
    </ScrollView>

</RelativeLayout>
